kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-resume-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cloud-resume
  template:
    metadata:
      labels:
        app: cloud-resume
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      containers:
      - name: cloud-resume
        image: ghcr.io/mariammbello/resume-frontend:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
