kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud_resume-service
spec:
  type: NodePort
  selector:
    app: cloud_resume
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080  # You can specify a port or let Kubernetes assign one
